# skiagd

./: .Rbuildignore  .gitignore  .imgbotconfig  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  README.qmd  configure
.devcontainer/: devcontainer.json
R/: 000-wrappers.R  001-lock-environments.R  aaa.R  add-arc.R  add-atlas.R  add-circle.R  add-line.R  add-path.R  add-point.R  add-rect.R  add-textblob.R  add-textpath.R  add-vertices.R  canvas.R  cpp11.R  drawing.R  image-filter.R  mapping.R  native-raster.R  paint.R  path-effect.R  path-utils.R  path_effect.R  png.R  runtime-effect.R  shader.R  skiagd-package.R  zzz.R
man/: BlendMode.Rd  Cap.Rd  FillType.Rd  Join.Rd  PathEffect.Rd  PointMode.Rd  Shader.Rd  Style.Rd  TileMode.Rd  add_arc.Rd  add_atlas.Rd  add_circle.Rd  add_diff_rect.Rd  add_line.Rd  add_path.Rd  add_png.Rd  add_point.Rd  add_rect.Rd  add_rounded_rect.Rd  add_text.Rd  add_textpath.Rd  add_vertices.Rd  as_nativeraster.Rd  as_png.Rd  as_recordedplot.Rd  canvas.Rd  col2rgba.Rd  create_mapping.Rd  dev_size.Rd  draw_img.Rd  embed_img.Rd  enable_autocomplete.Rd  freeze.Rd  grapes-timer-grapes.Rd  list_font_families.Rd  op_count.Rd  paint.Rd  path_bounds.Rd  path_interpolate.Rd  path_transform.Rd  (+25 more)
src/: .gitignore  Makevars.in  Makevars.win.in  cpp11.cpp  init.c  skiagd-win.def  skiagd.cpp  skiagd.h  (+1 more)
src/rust/: Cargo.toml  api.h  build.rs
src/rust/src/: canvas.rs  lib.rs  matrix.rs  paint_props.rs  path_transform.rs  runtime_effect.rs
src/rust/src/paint_attrs/: blend_mode.rs  font.rs  image_filter.rs  mod.rs  path_effect.rs  shader.rs  stroke.rs
(+13 files in other folders)
