[package]
name = "skiagd"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
anyhow = "1.0.97"
savvy = "0.8.11"
skia-safe = { version = "0.86.1", features = ["textlayout"] }

[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery.
#
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
#
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "unwind"
